--- a/Uebung1/uebung1.html
+++ b/Uebung1/uebung1.html
@@ -12,12 +12,12 @@
 
 <nav>
 
-    <li><a href="uebung1.html">ALLE</a></li>
-    <li><a href="ag.html">A-G</a></li>
-    <li><a href="hl.html">H-L</a></li>
-    <li><a href="mr.html">M-R</a></li>
-    <li><a href="sz.html">S-Z</a></li>
-    <li><a href="uebung1.html">Startseite</a></li>
+     <a href="uebung1.html">ALLE</a>
+     <a href="ag.html">A-G</a>
+     <a href="hl.html">H-L</a>
+     <a href="mr.html">M-R</a>
+     <a href="sz.html">S-Z</a>
+     <a href="uebung1.html">Startseite</a>
 
 </nav>
 
