--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Erster Test</title>
+    <title>Meine Lösungen</title>
 </head>
 <body>
-<h1>Willkommen</h1>
-<p>Das ist die Datei index.html. Sie liegt bei mir
-    unter /Users/jornfreiheit/Sites/Webtech20.
-    Der Ordner /Users/jornfreiheit/Sites ist mein
-    DocumentRoot, deshalb kann ich diese Datei im Browser
-    unter localhost/Webtech20/index.html aufrufen.
-    Der Ordner Webtech20 wird von Git verwaltet. </p>
+
+    <ol>
+        <li><a href="http://localhost:63343/Webtech20/Uebung1/uebung1.html?_ijt=f9rj5ihcp0sj9jm5lq3tliii2f"> Übung 2 </a> </li>
+        <li>Übung 3</li>
+        <li>Übung 4</li>
+    </ol>
+
 </body>
 </html>
