changed style of table

--- a/Uebung2/NN/uebung2.html
+++ b/Uebung2/NN/uebung2.html
@@ -2,11 +2,37 @@
 <html lang="de" xmlns:height="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>WebTech20</title>
-</head>
-<body>
 
-<h1>Teilnehmer_innen WebTech</h1>
+    <title>WebTech20</title>
+    <link rel="stylesheet" href="./styles/mystyles.css">
+    <style>
+            table, th, td {
+                  border: 1px solid black;
+            }
+            table {
+                    width: 70%;
+                    border-collapse: collapse;
+                  }
+
+             td {
+                    height: 30px;
+                    vertical-align: center;
+                }
+             th, td {
+                     padding: 8px;
+                    }
+            tr:hover {background-color:#f5f5f5;}
+
+            th {
+                background-color: #76B900;
+                color: white;
+               }
+    </style>
+
+</head>
+<body style="font-family:Verdana;">
+
+<h1 style="color: #FF5F00; background-color: #AFAFAF;">Teilnehmer_innen WebTech</h1>
 
 <img src="../images/fiw.jpg" alt="FIW-Logo" style="width: 53px; height=48px;"/>
 
@@ -17,7 +43,7 @@
      <a href="hl.html">H-L</a>
      <a href="mr.html">M-R</a>
      <a href="sz.html">S-Z</a>
-     <a href="uebung1.html">Startseite</a>
+     <a href="uebung2.html">Startseite</a>
 
 </nav>
 
