changed style of table

--- a/Uebung2/NN/uebung2.html
+++ b/Uebung2/NN/uebung2.html
@@ -32,12 +32,13 @@
 </head>
 <body style="font-family:Verdana;">
 
-<h1 style="color: #FF5F00; background-color: #AFAFAF;">Teilnehmer_innen WebTech</h1>
+<center><h1 style="color: #FF5F00; background-color: #AFAFAF;">Teilnehmer_innen WebTech</h1><center>
 
 <img src="../images/fiw.jpg" alt="FIW-Logo" style="width: 53px; height=48px;"/>
 
 <nav>
 
+    <ul align="left">
      <a href="uebung2.html">ALLE</a>
      <a href="ag.html">A-G</a>
      <a href="hl.html">H-L</a>
