--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 <body>
 
     <ol>
-        <li><a href="http://localhost:63343/Webtech20/Uebung1/uebung1.html?_ijt=f9rj5ihcp0sj9jm5lq3tliii2f"> Übung 2 </a> </li>
+        <li><a href="http://localhost:63343/Webtech20/Uebung1/uebung1.html?_ijt=f9rj5ihcp0sj9jm5lq3tliii2f"> Übung 1 </a> </li>
+        <li>Übung 2</li>
         <li>Übung 3</li>
         <li>Übung 4</li>
+        <li>Übung 5</li>
+        <li>Übung 6</li>
+        <li>Übung 7</li>
+        <li>Übung 8</li>
+        <li>Übung 9</li>
+        <li>Übung 10</li>
     </ol>
 
 </body>
