--- a/Uebung2/NN/sz.html
+++ b/Uebung2/NN/sz.html
@@ -1,4 +1,28 @@
-<table>
+<style>
+            table, th, td {
+                  border: 1px solid black;
+            }
+            table {
+                    width: 70%;
+                    border-collapse: collapse;
+                  }
+
+             td {
+                    height: 30px;
+                    vertical-align: center;
+                }
+             th, td {
+                     padding: 8px;
+                    }
+            tr:hover {background-color:#f5f5f5;}
+
+            th {
+                background-color: #76B900;
+                color: white;
+               }
+    </style>
+
+<center><table></center>
     <thead>
     <tr>
         <th>Vorname</th>
