--- a/Uebung2/NN/uebung2.html
+++ b/Uebung2/NN/uebung2.html
@@ -10,7 +10,7 @@
                   border: 1px solid black;
             }
             table {
-                    width: 70%;
+                    width: 80%;
                     border-collapse: collapse;
                   }
 
@@ -27,6 +27,23 @@
                 background-color: #76B900;
                 color: white;
                }
+
+            nav {
+                  margin-bottom: 50px;
+                }
+
+            a {
+                  display: inline-block;
+                  background: #0082D1;
+                  color: white;
+                  border-radius: 1em;
+                  border-color: #AFAFAF;
+                  border-style: solid;
+                  border-width: 2px;
+                  text-align: center;
+                  padding: 14px 16px;
+                  text-decoration: none;
+              }
     </style>
 
 </head>
