changed <footer> element

--- a/Uebung2/NN/uebung2.html
+++ b/Uebung2/NN/uebung2.html
@@ -44,6 +44,12 @@
                   padding: 14px 16px;
                   text-decoration: none;
               }
+
+              footer{
+                      color: black;
+                      background: #FF5F00;
+                      margin-top: 20px;
+                     }
     </style>
 
 </head>
@@ -380,7 +386,7 @@
         </tbody>
     </table>
 </section>
-<footer>Yara Jaafar</footer>
+<center><footer>Yara Jaafar -- Aufgabe 2</footer><center>
 
 
 </body>
