--- a/Uebung2/NN/uebung2.html
+++ b/Uebung2/NN/uebung2.html
@@ -2,15 +2,17 @@
 <html lang="de" xmlns:height="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-
     <title>WebTech20</title>
-    <link rel="stylesheet" href="./styles/mystyles.css">
+    <link rel="stylesheet" href="../styles/mystyles.css">
+
+
     <style>
             table, th, td {
                   border: 1px solid black;
             }
             table {
                     width: 80%;
+                    margin: 0 auto;
                     border-collapse: collapse;
                   }
 
@@ -50,14 +52,25 @@
                       background: #FF5F00;
                       margin-top: 20px;
                      }
+
+              header{
+                       color: #FF5F00;
+                       background: #AFAFAF;
+                       text-align: center;
+                    }
+
+               h3{
+
+                 }
     </style>
 
 </head>
 <body style="font-family:Verdana;">
 
-<center><h1 style="color: #FF5F00; background-color: #AFAFAF;">Teilnehmer_innen WebTech</h1><center>
-
-<img src="../images/fiw.jpg" alt="FIW-Logo" style="width: 53px; height=48px;"/>
+<header>
+    <h1 style="color: #FF5F00; background-color: #AFAFAF;">Teilnehmer_innen WebTech</h1>
+    <img src=".../images/fiw.jpg" alt="FIW-Logo" style="width: 53px; height=48px;"/>
+</header>
 
 <nav>
 
