changed some details

--- a/Uebung2/NN/uebung2.html
+++ b/Uebung2/NN/uebung2.html
@@ -5,24 +5,33 @@
     <title>WebTech20</title>
     <link rel="stylesheet" href="../styles/mystyles.css">
 
-
     <style>
-            table, th, td {
-                  border: 1px solid black;
+          body{
+                font-family:Verdana;
+           }
+
+           table, th, td {
+                  border: 2px solid black;
             }
+
             table {
                     width: 80%;
                     margin: 0 auto;
                     border-collapse: collapse;
+                    font-family: Verdana;
+                    box-shadow: 5px 10px #888888;
+
                   }
 
              td {
                     height: 30px;
                     vertical-align: center;
                 }
+
              th, td {
                      padding: 8px;
                     }
+
             tr:hover {background-color:#f5f5f5;}
 
             th {
@@ -32,6 +41,7 @@
 
             nav {
                   margin-bottom: 50px;
+                  padding: 25px 5px;
                 }
 
             a {
@@ -49,8 +59,13 @@
 
               footer{
                       color: black;
+                      font-size: 12px;
+                      padding-top: 20px;
+                      padding-bottom: 20px;
                       background: #FF5F00;
-                      margin-top: 20px;
+                      margin-bottom: 50px;
+	                  height:40px;
+	                  text-align: center;
                      }
 
               header{
@@ -60,21 +75,22 @@
                     }
 
                h3{
+                        color: black;
+                        padding: 7px 112px;
+                    }
 
-                 }
     </style>
 
 </head>
-<body style="font-family:Verdana;">
-
+<body>
 <header>
     <h1 style="color: #FF5F00; background-color: #AFAFAF;">Teilnehmer_innen WebTech</h1>
-    <img src=".../images/fiw.jpg" alt="FIW-Logo" style="width: 53px; height=48px;"/>
+    <img src="../images/fiw.jpg" style="width: 53px; height=48px;"/>
 </header>
 
 <nav>
 
-    <ul align="left">
+     <ul align="left">
      <a href="uebung2.html">ALLE</a>
      <a href="ag.html">A-G</a>
      <a href="hl.html">H-L</a>
@@ -399,7 +415,7 @@
         </tbody>
     </table>
 </section>
-<center><footer>Yara Jaafar -- Aufgabe 2</footer><center>
+<footer>Yara Jaafar -- Aufgabe 2</footer>
 
 
 </body>
