changed some details

--- a/Uebung2/NN/uebung2.html
+++ b/Uebung2/NN/uebung2.html
@@ -59,9 +59,8 @@
 
               footer{
                       color: black;
-                      font-size: 12px;
-                      padding-top: 20px;
-                      padding-bottom: 20px;
+                      font-size: 14px;
+                      padding: 20px 112px;
                       background: #FF5F00;
                       margin-bottom: 50px;
 	                  height:40px;
