--- a/Uebung3/uebung3.html
+++ b/Uebung3/uebung3.html
@@ -1,61 +1,26 @@
 <!DOCTYPE html>
-<html lang="de" xmlns:height="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>WebTech20</title>
-    <link rel="stylesheet" href="../styles/mystyles.css">
 
     <style>
           body{
                 font-family:Verdana;
            }
 
-           table, th, td {
-                  border: 2px solid black;
+
+            a{
+                color: orange;
             }
 
-            table {
-                    width: 80%;
-                    margin: 0 auto;
-                    border-collapse: collapse;
-                    font-family: Verdana;
-                    box-shadow: 5px 10px #888888;
+            nav{
+                 background: lightgray;
+            }
 
-                  }
 
-             td {
-                    height: 30px;
-                    vertical-align: center;
-                }
-
-             th, td {
-                     padding: 8px;
-                    }
-
-            tr:hover {background-color:#f5f5f5;}
-
-            th {
-                background-color: #76B900;
-                color: white;
-               }
-
-            nav {
-                  margin-bottom: 50px;
-                  padding: 25px 5px;
-                }
-
-            a {
-                  display: inline-block;
-                  background: #0082D1;
-                  color: white;
-                  border-radius: 1em;
-                  border-color: #AFAFAF;
-                  border-style: solid;
-                  border-width: 2px;
-                  text-align: center;
-                  padding: 14px 16px;
-                  text-decoration: none;
-              }
 
               footer{
                       color: black;
@@ -78,30 +43,55 @@
                         padding: 7px 140px;
                     }
 
+               div{
+                        text-align: center;
+                        font-size: smaller;
+               }
+
+               img{
+                        display: flex;
+                        justify-content: left;
+               }
+
+
+
     </style>
 
 </head>
 <body>
-<header>
-    <h1 style="color: #FF5F00; background-color: #AFAFAF;">Teilnehmer_innen WebTech</h1>
-    <img src="../images/fiw.jpg" style="width: 53px; height=48px;"/>
-</header>
+<div class="jumbotron">
+        <div class="container">
+        <h1 class="display-5" >Teilnehmerinnen WebTech</h1>
+        <img src="../images/fiw.jpg" style="width: 67px; height=48px;"/>
+        </div>
+</div>
 
-<nav>
 
-     <ul align="left">
-     <a href="uebung2.html">ALLE</a>
-     <a href="ag.html">A-G</a>
-     <a href="hl.html">H-L</a>
-     <a href="mr.html">M-R</a>
-     <a href="sz.html">S-Z</a>
-     <a href="uebung2.html">Startseite</a>
-
+<nav class="navbar navbar-expand-lg">
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="uebung2.html">ALLE <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="ag.html">A-G</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="hl.html">H-L</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="mr.html">M-R</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="sz.html">S-Z</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="uebung2.html">Startseite</a>
+        </li>
 </nav>
 
+
 <section>
-    <h3>Alle Teilnehmer_innen</h3>
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>Vorname</th>
