--- a/Uebung3/uebung3.html
+++ b/Uebung3/uebung3.html
@@ -69,6 +69,18 @@
                         margin: 90px;
                         padding: 3px;
                         margin-left: 30px;
+
+
+          .rechts, .links {
+              background-color: lightgrey;
+              height: 100px;
+          }
+
+          @media screen and (min-width: 992px) {
+              .rechts, .links {
+                  background-color: lightgrey;
+                  height: auto;
+              }
           }
 
 
@@ -86,26 +98,19 @@
 
 <nav>
     <ul class="nav">
-        <li class="nav-item active">
-            <a class="nav-link" href="uebung3.html">ALLE</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#A">A-G</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#H">H-L</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#M">M-R</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#S">S-Z</a>
-        </li>
+        <li class="nav-item active"><a class="nav-link" href="uebung3.html">ALLE</a></li>
+        <li class="nav-item"><a class="nav-link" href="#A">A-G</a></li>
+        <li class="nav-item"><a class="nav-link" href="#H">H-L</a></li>
+        <li class="nav-item"><a class="nav-link" href="#M">M-R</a></li>
+        <li class="nav-item"><a class="nav-link" href="#S">S-Z</a></li>
 </nav>
 
-
-<section>
-    <table class="table table-striped">
+<main class="row">
+    <div class="links col-12 col-lg-2">
+        <h2>links</h2>
+    </div>
+    <div class="table-responsive col-12 col-lg-8">
+    <table class="table table-striped table-hover">
         <thead>
         <tr>
             <th>Vorname</th>
@@ -417,7 +422,12 @@
         </tr>
         </tbody>
     </table>
-</section>
+    </div>
+    <div class="rechts col-12 col-lg-2">
+        <h2>rechts</h2>
+    </div>
+</main>
+
 <footer>Übung 3 - Yara Jaafar</footer>
 
 
