--- a/Uebung4/uebung4.html
+++ b/Uebung4/uebung4.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>WebTech20</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>WebTech20</title>
 
     <style>
           body{
-                    font-family: Arial;
+                    font-family: Arial,serif;
            }
 
 
           a{
                     color: #FF5F00;
                     font-size: larger;
-                    font-family: Arial;
+                    font-family: Arial,serif;
           }
 
           a:hover {   /* mouse over */
@@ -62,14 +62,14 @@
                         justify-content: left;
           }
 
-          #img{
-                        position: absolute;
-                        top: 10px;
-                        left: 4px;
-                        margin: 90px;
-                        padding: 3px;
-                        margin-left: 30px;
-
+          #img {
+              position: absolute;
+              top: 10px;
+              left: 4px;
+              margin: 90px;
+              padding: 3px;
+              margin-left: 30px;
+          }
 
           .rechts, .links {
               background-color: lightgrey;
@@ -90,19 +90,18 @@
 <body>
 <div class="jumbotron">
         <div class="container">
-        <h1 class="display-5" >Teilnehmerinnen WebTech</h1>
-        <img id="img" src="../images/fiw.jpg" style="width: 67px; height=48px;" alt="Logo FIW"/>
+        <img id="img" src="../images/fiw.jpg" style="width: 67px; height:48px;" alt="Logo FIW"/>
+            <h1>Teilnehmerinnen WebTech</h1>
         </div>
 </div>
-
-
 <nav>
     <ul class="nav">
-        <li class="nav-item active"><a class="nav-link" href="uebung3.html">ALLE</a></li>
+        <li class="nav-item"><a class="nav-link" href="uebung4.html">ALLE</a></li>
         <li class="nav-item"><a class="nav-link" href="#A">A-G</a></li>
         <li class="nav-item"><a class="nav-link" href="#H">H-L</a></li>
         <li class="nav-item"><a class="nav-link" href="#M">M-R</a></li>
         <li class="nav-item"><a class="nav-link" href="#S">S-Z</a></li>
+    </ul>
 </nav>
 
 <main class="row">
@@ -428,7 +427,107 @@
     </div>
 </main>
 
-<footer>Übung 3 - Yara Jaafar</footer>
+<footer>Übung 4 - Yara Jaafar</footer>
+
+
+<script>
+    let input1 =  document.getElementById('i1');
+    let input2 =  document.getElementById('i2');
+    let input3 =  document.getElementById('i3');
+    let input4 =  document.getElementById('i4');
+
+
+    input1.addEventListener('input', function (event)
+    {
+
+        this.classList.remove('is-invalid');
+    })
+
+    input2.addEventListener('input', function (event) {
+        this.classList.remove('is-invalid');
+    })
+
+    input3.addEventListener('input', function (event) {
+        this.classList.remove('is-invalid');
+
+    })
+
+    input4.addEventListener("input", function (event) {
+        this.classList.remove('is-invalid');
+    })
+
+
+
+    function checkAndAdd(){
+
+
+
+        let e1 = document.getElementById('e1');
+        let new_tr = document.createElement('tr');
+        let parent = document.getElementById('28');
+
+
+
+
+
+
+
+        if(input1.value!=""&&input2.value!=""&&input3.value!=""&&input4.value!="") {
+
+
+            let new_td1 = document.createElement('td');
+            new_td1.innerHTML = input1.value;
+
+            let new_td2 = document.createElement('td');
+            new_td2.innerHTML = input2.value;
+
+            let new_td3 = document.createElement('td');
+            new_td3.innerHTML = input3.value;
+
+            let new_td4 = document.createElement('td');
+            new_td4.innerHTML = input4.value;
+
+            let new_td5 = document.createElement('td');
+
+            new_tr.append(new_td1, new_td2, new_td3, new_td4, new_td5);
+
+
+            parent.insertBefore(new_tr, e1);
+
+            input1.value="";
+            input2.value="";
+            input3.value="";
+            input4.value="";
+
+        }
+
+        else
+        {
+            if(input1.value=="")
+            {
+                input1.classList.add('is-invalid')
+            }
+
+            if(input2.value=="")
+            {
+                input2.classList.add('is-invalid')
+            }
+
+            if(input3.value=="")
+            {
+                input3.classList.add('is-invalid')
+            }
+
+            if(input4.value=="")
+            {
+                input4.classList.add('is-invalid')
+            }
+
+
+        }
+    }
+
+</script>
 
 
 </body>
