--- a/Uebung4/ag.html
+++ b/Uebung4/ag.html
@@ -3,226 +3,341 @@
 <head>
     <meta charset="UTF-8">
     <title>WebTech20</title>
-    <link rel="stylesheet" href="../styles/mystyles.css">
-
-    <style>
-          body{
-                font-family:Verdana;
-           }
-
-           table, th, td {
-                  border: 1px solid black;
-            }
-
-            table {
-                    width: 80%;
-                    margin: 0 auto;
-                    border-collapse: collapse;
-                    font-family: Verdana;
-                    box-shadow: 5px 10px #888888;
-
-                  }
-
-             td {
-                    height: 30px;
-                    vertical-align: center;
-                }
-
-             th, td {
-                     padding: 8px;
-                    }
-
-            tr:hover {background-color:#f5f5f5;}
-
-            th {
-                background-color: #76B900;
-                color: white;
-               }
-
-            nav {
-                  margin-bottom: 50px;
-                }
-
-            a {
-                  display: inline-block;
-                  background: #0082D1;
-                  color: white;
-                  border-radius: 1em;
-                  border-color: #AFAFAF;
-                  border-style: solid;
-                  border-width: 2px;
-                  text-align: center;
-                  padding: 14px 16px;
-                  text-decoration: none;
-              }
-
-              a:link {
-                      color:red;
-                      }
-
-              a:visited {
-                      color:darkgrey;
-                       }
-
-              a:hover {
-                      color:red;
-                      }
-
-              a:active {
-                      color:lightblue;
-                       }
-
-              footer{
-                      color: black;
-                      font-size: 16px;
-                      padding-top: 20px;
-                      padding-bottom: 20px;
-                      background: #FF5F00;
-                      margin-bottom: 50px;
-	                  height:40px;
-	                  text-align: center;
-                     }
-
-              header{
-                       color: #FF5F00;
-                       background: #AFAFAF;
-                       text-align: center;
-                    }
-
-    </style>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <title>Teilnehmer_innen von A-G</title>
+</head>
 <body>
 <header>
     <h1 style="color: #FF5F00; background-color: #AFAFAF;">Teilnehmer_innen WebTech</h1>
-    <img src="../images/fiw.jpg" alt="FIW-Logo" style="width: 53px; height=48px;"/>
+    <img src="../images/fiw.jpg" style="width:53px; height:48px;" alt="FIW Logo"/>
 </header>
 
-<nav>
+        <style>
+            body{
+                font-family: Arial,serif;
+            }
 
-        <ul align="left">
-        <a href="uebung2.html">ALLE</a>
-        <a href="ag.html">A-G</a>
-        <a href="hl.html">H-L</a>
-        <a href="mr.html">M-R</a>
-        <a href="sz.html">S-Z</a>
-        <a href="uebung2.html">Startseite</a>
 
-</nav>
+            a{
+                color: #FF5F00;
+                font-size: larger;
+                font-family: Arial,serif;
+            }
+
+            a:hover {   /* mouse over */
+                color:#0082D1;
+            }
+
+            nav{
+                background: lightgray;
+                padding-top: 5px;
+                padding-bottom: 5px;
+                margin-bottom: 20px;
+            }
+
+            tr:hover{
+                background-color:#76B900;
+            }
+
+
+            footer{
+                color: white;
+                font-size: 17px;
+                padding: 30px 140px;
+                background: grey;
+                margin-bottom: 60px;
+                height:20px;
+                text-align: center;
+                padding-bottom: 40px;
+                padding-top: 10px
+            }
+
+            h1{
+                padding-top: 40px;
+                padding-bottom: 40px;
+            }
+
+
+            div{
+                text-align: center;
+                font-size: smaller;
+            }
+
+            img{
+                display: flex;
+                justify-content: left;
+            }
+
+            #img {
+                position: absolute;
+                top: 10px;
+                left: 4px;
+                margin: 90px;
+                padding: 3px;
+                margin-left: 30px;
+            }
+
+            .rechts, .links {
+                background-color: lightgrey;
+                height: 100px;
+            }
+
+            @media screen and (min-width: 992px) {
+                .rechts, .links {
+                    background-color: lightgrey;
+                    height: auto;
+                }
+            }
+
+        </style>
+
+
 <section>
-    <h3>Teilnehmer_innen A-G</h3>
+    <h3>Alle Teilnehmer_innen von A-G</h3>
     <table>
-    <thead>
-    <tr>
-        <th>Vorname</th>
-        <th>Nachname</th>
-        <th>E-Mail-Adresse</th>
-        <th>IP-Adresse</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-    <tr>
-        <td>Adam</td>
-        <td>Anderson</td>
-        <td>aanderson8@google.fr</td>
-        <td>118.93.83.157</td>
-    </tr>
-    <tr>
-        <td>Susan</td>
-        <td>Andrews</td>
-        <td>sandrewsn@google.co.jp</td>
-        <td>228.214.9.251</td>
-    </tr>
-    <tr>
-        <td>Catherine</td>
-        <td>Andrews</td>
-        <td>candrewsp@noaa.gov</td>
-        <td>112.111.87.178</td>
-    </tr>
-    <tr>
-        <td>Alan</td>
-        <td>Bradley</td>
-        <td>abradley1c@globo.com</td>
-        <td>229.152.117.127</td>
-    </tr>
-    <tr>
-        <td>Anne</td>
-        <td>Brooks</td>
-        <td>abrooks16@bravesites.com</td>
-        <td>243.159.39.234</td>
-    </tr>
-    <tr>
-        <td>Russell</td>
-        <td>Brown</td>
-        <td>rbrownq@nifty.com</td>
-        <td>215.38.120.242</td>
-    </tr>
-    <tr>
-        <td>Ryan</td>
-        <td>Burton</td>
-        <td>rburton18@foxnews.com</td>
-        <td>159.60.107.14</td>
-    </tr>
-    <tr>
-        <td>Roy</td>
-        <td>Campbell</td>
-        <td>rcampbell1@geocities.com</td>
-        <td>237.232.34.20</td>
-    </tr>
-    <tr>
-        <td>Russell</td>
-        <td>Campbell</td>
-        <td>rcampbell17@eventbrite.com</td>
-        <td>251.2.92.63</td>
-    </tr>
-    <tr>
-        <td>Bonnie</td>
-        <td>Coleman</td>
-        <td>bcoleman11@fc2.com</td>
-        <td>109.150.122.102</td>
-    </tr>
-    <tr>
-        <td>Ernest</td>
-        <td>Coleman</td>
-        <td>ecoleman15@businessweek.com</td>
-        <td>213.173.4.7</td>
-    </tr>
-    <tr>
-        <td>Richard</td>
-        <td>Cruz</td>
-        <td>rcruz7@unc.edu</td>
-        <td>235.124.23.221</td>
-    </tr>
-    <tr>
-        <td>Sean</td>
-        <td>Cruz</td>
-        <td>scruz10@answers.com</td>
-        <td>92.255.49.227</td>
-    </tr>
-    <tr>
-        <td>Rebecca</td>
-        <td>Cunningham</td>
-        <td>rcunninghamd@mac.com</td>
-        <td>65.79.191.52</td>
-    </tr>
-    <tr>
-        <td>Margaret</td>
-        <td>Evans</td>
-        <td>mevansh@pcworld.com</td>
-        <td>162.10.86.196</td>
-    </tr>
-    <tr>
-        <td>Jeffrey</td>
-        <td>Ford</td>
-        <td>jford14@cnet.com</td>
-        <td>210.216.54.14</td>
-    </tr>
-    <tr>
-        <td>Andrea</td>
-        <td>Gardner</td>
-        <td>agardnerv@woothemes.com</td>
-        <td>179.91.0.30</td>
-    </tr>
+        <thead>
+        <div class="links col-12 col-lg-2">
+            <h2>links</h2>
+        </div>
+
+        <div class="table-responsive col-12 col-lg-8">
+            <table class="table table-striped table-hover">
+                 <tr>
+                    <th>Vorname</th>
+                    <th>Nachname</th>
+                     <th>E-Mail-Adresse</th>
+                    <th>IP-Adresse</th>
+                 </tr>
+                 </table>
+                <table>
+                <tr>
+                <tr>
+                       <td>Adam</td>
+                       <td>Anderson</td>
+                       <td>aanderson8@google.fr</td>
+                       <td>118.93.83.157</td>
+                </tr>
+                <tr>
+                        <td>Susan</td>
+                        <td>Andrews</td>
+                        <td>sandrewsn@google.co.jp</td>
+                        <td>228.214.9.251</td>
+                </tr>
+                 <tr>
+                       <td>Catherine</td>
+                       <td>Andrews</td>
+                       <td>candrewsp@noaa.gov</td>
+                       <td>112.111.87.178</td>
+                  </tr>
+                   <tr>
+                       <td>Alan</td>
+                       <td>Bradley</td>
+                       <td>abradley1c@globo.com</td>
+                       <td>229.152.117.127</td>
+                   </tr>
+                    <tr>
+                        <td>Anne</td>
+                        <td>Brooks</td>
+                        <td>abrooks16@bravesites.com</td>
+                        <td>243.159.39.234</td>
+                     </tr>
+                      <tr>
+                        <td>Russell</td>
+                        <td>Brown</td>
+                        <td>rbrownq@nifty.com</td>
+                        <td>215.38.120.242</td>
+                      </tr>
+                                       <tr>
+                        <td>Ryan</td>
+                        <td>Burton</td>
+                        <td>rburton18@foxnews.com</td>
+                        <td>159.60.107.14</td>
+                    </tr>
+                    <tr>
+                        <td>Roy</td>
+                        <td>Campbell</td>
+                        <td>rcampbell1@geocities.com</td>
+                        <td>237.232.34.20</td>
+                    </tr>
+                    <tr>
+                        <td>Russell</td>
+                        <td>Campbell</td>
+                        <td>rcampbell17@eventbrite.com</td>
+                        <td>251.2.92.63</td>
+                    </tr>
+                    <tr>
+                        <td>Bonnie</td>
+                        <td>Coleman</td>
+                        <td>bcoleman11@fc2.com</td>
+                        <td>109.150.122.102</td>
+                    </tr>
+                    <tr>
+                        <td>Ernest</td>
+                        <td>Coleman</td>
+                        <td>ecoleman15@businessweek.com</td>
+                        <td>213.173.4.7</td>
+                    </tr>
+                    <tr>
+                        <td>Richard</td>
+                        <td>Cruz</td>
+                        <td>rcruz7@unc.edu</td>
+                        <td>235.124.23.221</td>
+                    </tr>
+                    <tr>
+                        <td>Sean</td>
+                        <td>Cruz</td>
+                        <td>scruz10@answers.com</td>
+                        <td>92.255.49.227</td>
+                    </tr>
+                    <tr>
+                        <td>Rebecca</td>
+                        <td>Cunningham</td>
+                        <td>rcunninghamd@mac.com</td>
+                        <td>65.79.191.52</td>
+                    </tr>
+                    <tr>
+                        <td>Margaret</td>
+                        <td>Evans</td>
+                        <td>mevansh@pcworld.com</td>
+                        <td>162.10.86.196</td>
+                    </tr>
+                    <tr>
+                        <td>Jeffrey</td>
+                        <td>Ford</td>
+                        <td>jford14@cnet.com</td>
+                        <td>210.216.54.14</td>
+                    </tr>
+                    <tr>
+                        <td>Andrea</td>
+                        <td>Gardner</td>
+                        <td>agardnerv@woothemes.com</td>
+                         <td>179.91.0.30</td>
+                     </tr>
+
+                <tr id = "e1">
+                    <td> <input id="i1" type="text" class="form-control" placeholder="Vorname"  /></td>
+                    <td> <input id="i2" type="text" class="form-control" placeholder="Nachname" /></td>
+                    <td> <input id="i3" type="text" class="form-control" placeholder="Email-Adresse" /></td>
+
+                    <td>
+                        <input id="i4" type="text" class="form-control" placeholder="IP-Adresse" />
+                    </td>
+
+                    <td>
+                        <button type="button" class="btn btn-dark" onclick="checkAndAdd()">Add</button>
+                    </td>
+
+                </tr>
+            </table>
+        </div>
+
     </tbody>
-</table>
-    <footer>Yara Jaafar -- Aufgabe 2</footer>
+    </table>
+    <div class="rechts col-12 col-lg-2">
+        <h2>rechts</h2>
+    </div>
+</section>
+    <footer>
+        <p>Yara Jaafar -- Aufgabe 4</p>
+    </footer>
+
+<script>
+    let input1 =  document.getElementById('i1');
+    let input2 =  document.getElementById('i2');
+    let input3 =  document.getElementById('i3');
+    let input4 =  document.getElementById('i4');
+
+
+    input1.addEventListener('input', function (event)
+    {
+
+        this.classList.remove('is-invalid');
+    })
+
+    input2.addEventListener('input', function (event) {
+        this.classList.remove('is-invalid');
+    })
+
+    input3.addEventListener('input', function (event) {
+        this.classList.remove('is-invalid');
+
+    })
+
+    input4.addEventListener("input", function (event) {
+        this.classList.remove('is-invalid');
+    })
+
+
+
+    function checkAndAdd(){
+
+
+
+        let e1 = document.getElementById('e1');
+        let new_tr = document.createElement('tr');
+        let parent = document.getElementById('28');
+
+
+
+
+
+
+
+        if(input1.value!=""&&input2.value!=""&&input3.value!=""&&input4.value!="") {
+
+
+            let new_td1 = document.createElement('td');
+            new_td1.innerHTML = input1.value;
+
+            let new_td2 = document.createElement('td');
+            new_td2.innerHTML = input2.value;
+
+            let new_td3 = document.createElement('td');
+            new_td3.innerHTML = input3.value;
+
+            let new_td4 = document.createElement('td');
+            new_td4.innerHTML = input4.value;
+
+            let new_td5 = document.createElement('td');
+
+            new_tr.append(new_td1, new_td2, new_td3, new_td4, new_td5);
+
+
+            parent.insertBefore(new_tr, e1);
+
+            input1.value="";
+            input2.value="";
+            input3.value="";
+            input4.value="";
+
+        }
+
+        else
+        {
+            if(input1.value=="")
+            {
+                input1.classList.add('is-invalid')
+            }
+
+            if(input2.value=="")
+            {
+                input2.classList.add('is-invalid')
+            }
+
+            if(input3.value=="")
+            {
+                input3.classList.add('is-invalid')
+            }
+
+            if(input4.value=="")
+            {
+                input4.classList.add('is-invalid')
+            }
+
+
+        }
+    }
+
+</script>
+</body>
+</html>
