--- a/Uebung3/uebung3.html
+++ b/Uebung3/uebung3.html
@@ -8,14 +8,14 @@
 
     <style>
           body{
-                    font-family: Arial;
+                    font-family: Arial,serif;
            }
 
 
           a{
                     color: #FF5F00;
                     font-size: larger;
-                    font-family: Arial;
+                    font-family: Arial,serif;
           }
 
           a:hover {   /* mouse over */
@@ -62,14 +62,14 @@
                         justify-content: left;
           }
 
-          #img{
-                        position: absolute;
-                        top: 10px;
-                        left: 4px;
-                        margin: 90px;
-                        padding: 3px;
-                        margin-left: 30px;
-
+          #img {
+              position: absolute;
+              top: 10px;
+              left: 4px;
+              margin: 90px;
+              padding: 3px;
+              margin-left: 30px;
+          }
 
           .rechts, .links {
               background-color: lightgrey;
@@ -91,7 +91,7 @@
 <div class="jumbotron">
         <div class="container">
         <h1 class="display-5" >Teilnehmerinnen WebTech</h1>
-        <img id="img" src="../images/fiw.jpg" style="width: 67px; height=48px;" alt="Logo FIW"/>
+        <img id="img" src="../images/fiw.jpg" style="width: 67px; height:48px;" alt="Logo FIW"/>
         </div>
 </div>
 
@@ -103,6 +103,7 @@
         <li class="nav-item"><a class="nav-link" href="#H">H-L</a></li>
         <li class="nav-item"><a class="nav-link" href="#M">M-R</a></li>
         <li class="nav-item"><a class="nav-link" href="#S">S-Z</a></li>
+    </ul>
 </nav>
 
 <main class="row">
