--- a/Uebung4/mr.html
+++ b/Uebung4/mr.html
@@ -1,83 +1,43 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WebTech20</title>
+    <title>Webtech2020</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>Teilnehmer_innen von S-Z</title>
+    <title>Teilnehmer_innen von M-R</title>
 </head>
 <body>
 <header>
-    <h1 style="color: #FF5F00; background-color: #AFAFAF;">Teilnehmer_innen WebTech</h1>
-    <img src="../images/fiw.jpg" style="width:53px; height:48px;" alt="FIW Logo"/>
-
+    <h1>Teilnehmer_innen WebTech</h1>
+    <img src="../images/fiw.jpg" style="width:53px; height:48px;"/>
     <style>
-        body{
-            font-family: Arial,serif;
-        }
-
-
-        a{
-            color: #FF5F00;
-            font-size: larger;
-            font-family: Arial,serif;
-        }
-
-        a:hover {   /* mouse over */
-            color:#0082D1;
-        }
-
-        nav{
-            background: lightgray;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            margin-bottom: 20px;
-        }
-
-        tr:hover{
-            background-color:#76B900;
-        }
-
-
-        footer{
-            color: white;
-            font-size: 17px;
-            padding: 30px 140px;
-            background: grey;
-            margin-bottom: 60px;
-            height:20px;
+        header
+        {
+            background-color: #AFAFAF;
             text-align: center;
-            padding-bottom: 40px;
-            padding-top: 10px
         }
-
-        h1{
-            padding-top: 40px;
-            padding-bottom: 40px;
-        }
-
-
-        div{
-            text-align: center;
-            font-size: smaller;
-        }
-
-        img{
-            display: flex;
-            justify-content: left;
-        }
-
-        #img {
-            position: absolute;
-            top: 10px;
-            left: 4px;
-            margin: 90px;
-            padding: 3px;
-            margin-left: 30px;
-        }
-
-        .rechts, .links {
+        .nav-link {
             background-color: lightgrey;
+            color:orange;
+            font-size: large;
+        }
+        .nav-link:hover {
+            color: #0082D1;
+        }
+        .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+            background-color: #76B900;
+        }
+        h1{
+            display: inline;
+            padding-left: 25%;
+        }
+        footer{
+            background-color: lightgrey;
+            font-size: small;
+        }
+        /* Mobile als Standard */
+        .rechts, .links {
+            background-color: #FF5F00;
             height: 100px;
         }
 
@@ -87,19 +47,17 @@
                 height: auto;
             }
         }
-
     </style>
 </header>
-
 <section>
-    <h3>Alle Teilnehmer_innen von S-Z</h3>
+    <h3>Alle Teilnehmer_innen von M-R</h3>
     <table>
-             <thead>
+        <thead>
         <div class="links col-12 col-lg-2">
             <h2>links</h2>
         </div>
         <div class="table-responsive col-12 col-lg-8">
-            <div class="table table-striped table-hover">
+            <table class="table table-striped table-hover">
                 <tr>
                     <th>Vorname</th>
                     <th>Nachname</th>
@@ -108,143 +66,147 @@
                 </tr>
                 </thead>
                 <tbody>
+                <tr>
+                <tr>
+                    <td>Jennifer</td>
+                    <td>Marshall</td>
+                    <td>jmarshallt@gnu.org</td>
+                    <td>104.191.49.94</td>
+                </tr>
+                <tr>
+                    <td>Eric</td>
+                    <td>Matthews</td>
+                    <td>ematthews5@independent.co.uk</td>
+                    <td>138.194.30.1</td>
+                </tr>
+                <tr>
+                    <td>Raymond</td>
+                    <td>Mcdonald</td>
+                    <td>rmcdonald2@ihg.com</td>
+                    <td>161.24.42.24</td>
+                </tr>
+                <tr>
+                    <td>Eric</td>
+                    <td>Miller</td>
+                    <td>emillere@creativecommons.org</td>
+                    <td>122.159.17.218</td>
+                </tr>
+                <tr>
+                    <td>Jonathan</td>
+                    <td>Morales</td>
+                    <td>jmoralesa@ovh.net</td>
+                    <td>97.65.110.105</td>
+                </tr>
+                <tr>
+                    <td>Marie</td>
+                    <td>Morgan</td>
+                    <td>mmorganb@cloudflare.com</td>
+                    <td>226.79.152.112</td>
+                </tr>
+                <tr>
+                    <td>Amanda</td>
+                    <td>Nelson</td>
+                    <td>anelson13@indiatimes.com</td>
+                    <td>161.185.121.245</td>
+                </tr>
+                <tr>
+                    <td>Lisa</td>
+                    <td>Olson</td>
+                    <td>lolsonr@telegraph.co.uk</td>
+                    <td>77.245.172.100</td>
+                </tr>
+                <tr>
+                    <td>Alice</td>
+                    <td>Ortiz</td>
+                    <td>aortizw@histats.com</td>
+                    <td>179.52.222.21</td>
+                </tr>
+                <tr>
+                    <td>Peter</td>
+                    <td>Phillips</td>
+                    <td>pphillipss@1688.com</td>
+                    <td>11.158.255.76</td>
+                </tr>
+                <tr>
+                    <td>Matthew</td>
+                    <td>Porter</td>
+                    <td>mporter9@europa.eu</td>
+                    <td>174.81.178.88</td>
+                </tr>
+                <tr>
+                    <td>Tammy</td>
+                    <td>Ray</td>
+                    <td>trayx@weather.com</td>
+                    <td>192.243.38.190</td>
+                </tr>
+                <tr>
+                    <td>Mark</td>
+                    <td>Richardson</td>
+                    <td>mrichardson1d@ihg.com</td>
+                    <td>209.217.14.154</td>
+                </tr>
+                <tr>
+                    <td>Joan</td>
+                    <td>Roberts</td>
+                    <td>jroberts12@alibaba.com</td>
+                    <td>4.91.143.62</td>
+                </tr>
+                <tr>
+                    <td>Kathleen</td>
+                    <td>Rose</td>
+                    <td>kroseg@pinterest.com</td>
+                    <td>222.172.140.56</td>
+                </tr>
+                <tr>
+                    <td>Steve</td>
+                    <td>Sanders</td>
+                    <td>ssanders1b@wikispaces.com</td>
+                    <td>91.61.109.245</td>
+                </tr>
+                <tr>
+                    <td>Shirley</td>
+                    <td>Scott</td>
+                    <td>sscottm@macromedia.com</td>
+                    <td>219.237.108.82</td>
+                </tr>
+                <tr>
+                    <td>Lillian</td>
+                    <td>Stephens</td>
+                    <td>lstephens19@hugedomains.com</td>
+                    <td>89.85.137.204</td>
+                </tr>
+                <tr>
+                    <td>Nicole</td>
+                    <td>Thompson</td>
+                    <td>nthompson3@admin.ch</td>
+                    <td>13.183.208.155</td>
+                </tr>
+                <tr>
+                    <td>Marie</td>
+                    <td>Thompson</td>
+                    <td>mthompsonz@yelp.com</td>
+                    <td>162.164.5.231</td>
+                </tr>
+                <tr id = "e1">
+                    <td> <input id="i1" type="text" class="form-control" placeholder="Vorname"  /></td>
+                    <td> <input id="i2" type="text" class="form-control" placeholder="Nachname" /></td>
+                    <td> <input id="i3" type="text" class="form-control" placeholder="Email-Adresse" /></td>
 
-                    <tr>
-                    <tr>
-                            <td>Jennifer</td>
-                            <td>Marshall</td>
-                            <td>jmarshallt@gnu.org</td>
-                            <td>104.191.49.94</td>
-                    </tr>
-                    <tr>
-                            <td>Eric</td>
-                            <td>Matthews</td>
-                            <td>ematthews5@independent.co.uk</td>
-                            <td>138.194.30.1</td>
-                    </tr>
-                    <tr>
-                            <td>Raymond</td>
-                            <td>Mcdonald</td>
-                            <td>rmcdonald2@ihg.com</td>
-                            <td>161.24.42.24</td>
-                    </tr>
-                    <tr>
-                            <td>Eric</td>
-                            <td>Miller</td>
-                            <td>emillere@creativecommons.org</td>
-                            <td>122.159.17.218</td>
-                    </tr>
-                    <tr>
-                            <td>Jonathan</td>
-                            <td>Morales</td>
-                            <td>jmoralesa@ovh.net</td>
-                            <td>97.65.110.105</td>
-                    </tr>
-                    <tr>
-                        <td>Marie</td>
-                        <td>Morgan</td>
-                        <td>mmorganb@cloudflare.com</td>
-                        <td>226.79.152.112</td>
-                    </tr>
-                    <tr>
-                        <td>Amanda</td>
-                        <td>Nelson</td>
-                        <td>anelson13@indiatimes.com</td>
-                        <td>161.185.121.245</td>
-                    </tr>
-                    <tr>
-                        <td>Lisa</td>
-                        <td>Olson</td>
-                        <td>lolsonr@telegraph.co.uk</td>
-                        <td>77.245.172.100</td>
-                    </tr>
-                    <tr>
-                        <td>Alice</td>
-                        <td>Ortiz</td>
-                        <td>aortizw@histats.com</td>
-                        <td>179.52.222.21</td>
-                    </tr>
-                    <tr>
-                        <td>Peter</td>
-                        <td>Phillips</td>
-                        <td>pphillipss@1688.com</td>
-                        <td>11.158.255.76</td>
-                    </tr>
-                    <tr>
-                        <td>Matthew</td>
-                        <td>Porter</td>
-                        <td>mporter9@europa.eu</td>
-                        <td>174.81.178.88</td>
-                    </tr>
-                    <tr>
-                        <td>Tammy</td>
-                        <td>Ray</td>
-                        <td>trayx@weather.com</td>
-                        <td>192.243.38.190</td>
-                    </tr>
-                    <tr>
-                        <td>Mark</td>
-                        <td>Richardson</td>
-                        <td>mrichardson1d@ihg.com</td>
-                        <td>209.217.14.154</td>
-                    </tr>
-                    <tr>
-                        <td>Joan</td>
-                        <td>Roberts</td>
-                        <td>jroberts12@alibaba.com</td>
-                        <td>4.91.143.62</td>
-                    </tr>
-                    <tr>
-                        <td>Kathleen</td>
-                        <td>Rose</td>
-                        <td>kroseg@pinterest.com</td>
-                        <td>222.172.140.56</td>
-                    </tr>
-                    <tr>
-                        <td>Steve</td>
-                        <td>Sanders</td>
-                        <td>ssanders1b@wikispaces.com</td>
-                        <td>91.61.109.245</td>
-                    </tr>
-                    <tr>
-                        <td>Shirley</td>
-                        <td>Scott</td>
-                        <td>sscottm@macromedia.com</td>
-                        <td>219.237.108.82</td>
-                    </tr>
-                    <tr>
-                        <td>Lillian</td>
-                        <td>Stephens</td>
-                        <td>lstephens19@hugedomains.com</td>
-                        <td>89.85.137.204</td>
-                    </tr>
-                    <tr>
-                        <td>Nicole</td>
-                        <td>Thompson</td>
-                        <td>nthompson3@admin.ch</td>
-                        <td>13.183.208.155</td>
-                    </tr>
-                    <tr>
-                        <td>Marie</td>
-                        <td>Thompson</td>
-                        <td>mthompsonz@yelp.com</td>
-                        <td>162.164.5.231</td>
-            </tr>
-            <tr id = "e1">
-                <td> <input id="i1" type="text" class="form-control" placeholder="Vorname"  /></td>
-                <td> <input id="i2" type="text" class="form-control" placeholder="Nachname" /></td>
-                <td> <input id="i3" type="text" class="form-control" placeholder="Email-Adresse" /></td>
+                    <td>
 
-                <td>
-                    <input id="i4" type="text" class="form-control" placeholder="IP-Adresse" />
-                </td>
+                        <input id="i4" type="text" class="form-control" placeholder="IP-Adresse" />
+                    </td>
 
-                <td>
-                    <button type="button" class="btn btn-dark" onclick="checkAndAdd()">Add</button>
-                </td>
 
-            </tr>
-        </table>
+
+
+                    <td>
+                        <button type="button" class="btn btn-dark" onclick="checkAndAdd()">Add</button>
+                    </td>
+
+                </tr>
+
+            </table>
         </div>
         </tbody>
     </table>
@@ -253,7 +215,7 @@
     </div>
 </section>
 <footer>
-    <p>Yara Jaafar -- Aufgabe 2</p>
+    <p>Yara Jaafar -- Aufgabe 4</p>
 </footer>
 <script>
     let input1 =  document.getElementById('i1');
@@ -355,4 +317,3 @@
 </script>
 </body>
 </html>
-
